change colour theme names

--- a/extras-slides.css
+++ b/extras-slides.css
@@ -12,19 +12,19 @@
   color: #000000;
 }
 
-.chapterone {
+.question {
   background-color: #e7e5cc;
   border-top: 100px solid #447243;
   color: #000000;
 }
 
-.chaptertwo {
+.hypotheses {
   background-color: #e7e5cc;
   border-top: 100px solid #1f5b25;
   color: #000000;
 }
 
-.chapterthree {
+.results {
   background-color: #e7e5cc;
   border-top: 100px solid #1e3d14;
   color: #000000;
